--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,7 @@
 /* This css file is the colorful.css theme from https://github.com/iwootten/jekyll-syntax */
 
 .highlight .hll { background-color: #ffffcc }
-.highlight  { background: #ffffff; }
+.highlight  { background: #ffffff; overflow: auto;}
 .highlight .c { color: #888888 } /* Comment */
 .highlight .err { color: #FF0000; background-color: #FFAAAA } /* Error */
 .highlight .k { color: #008800; font-weight: bold } /* Keyword */
